deploy/kubernetes/winery.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: winery
  labels:
    app: winery
    tier: frontend
spec:
  type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP.
  # type: LoadBalancer  
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: winery
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winery-deployment
  labels:
    app: winery
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: winery
      tier: frontend
  template:
    metadata:
      labels:
        app: winery
        tier: frontend
    spec:
      containers:
        - name: winery
          image: opentosca/radon-gmt:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
